FOLREL-612: Update mod-linked-data to Java 21 (#126)
* FOLREL-612: Update mod-linked-data to Java 21

* FOLREL-612: Update libraries and add github workflow

* FOLREL-612: Update mod-record-specifications-dto version